<resources>
    <string name="title_homescreen">HomeScreen</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="close_call">Close Call</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="progress_dialog_title_downloading">Downloading</string>
    <string name="progress_dialog_title_connecting">Connecting</string>
    <string name="progress_dialog_message_prefix_downloading">Downloading file</string>
    <string name="progress_dialog_message_prefix_connecting">Connecting to</string>
    <string name="auth_and_downloading_masters">Authenticating and downloading masters.</string>
    <string name="checking_new_version">Checking New version.</string>
    <string name="error_message_bad_url">Error: Invalid URL!</string>
    <string name="error_message_file_not_found">Error: File not found!</string>
    <string name="error_message_general">Error: downloading file!</string>
    <string name="activation_error_try_again">Activation Error. Try Again. </string>
    <string name="communication_error_please_try_again">Communication error. Please try again.</string>
    <string name="sessionout_loginagain">Session out. Login again.</string>
    <string name="invalid_key_try_with_valid_key">Invalid key. Try with valid key.</string>
    <string name="activation_failed">Activation failed.</string>
    <string name="user_message_download_canceled">Download cancelled!</string>
    <string name="update_available">Update of this application is available. Click OK to download.</string>
    <string name="unable_to_access_the_sdcard">Unable to access the SD Card</string>
    <string name="do_u_want_logout">Do you want to Logout?</string>
    <string name="do_you_want_to_delete_the_image">Do you want to delete the Image?</string>
    <string name="do_u_want_close_call">Do you want to close the call?</string>
    <string name="doyouwantgoback">Do you want to go back?</string>
    <string name="do_u_want_to_close_the_day">Do you want to close for the day?</string>
    <string name="are_you_sure_to_close_without_savingthe_data">Are you sure to close without saving the data?</string>
    <string name="no_products_exists">No products exists</string>
    <string name="Noorderreason">No Order Reason</string>
    <string name="no_unsubmitted_orders">No unsubmitted orders.</string>
    <string name="no_network_connection">No Internet connection.</string>
    <string name="successfully_activated">Successfully activated.</string>
    <string name="invoice_created_successfully">Invoice created successfully.</string>
    <string name="order_saved_and_print_preview_created_successfully">Order saved and print preview created successfully.</string>
    <string name="day_closed">Day has been closed.</string>
    <string name="savingquestionanswers">Saving Question Answers…</string>
    <string name="saved_successfully">Saved Successfully.</string>
    <string name="please_take_order_to_create_invoice">Please take another order to create Invoice.</string>
    <string name="pleaseanswerallthequestions">Please Answer All the Questions!</string>
    <string name="please_select_anyone_invoice_from_list">Please select anyone invoice from list.</string>
    <string name="please_select_item">Please select an Item</string>
    <string name="please_complete_previous_activity">Please Complete Previous Activity(s).</string>
    <string name="please_connect_to_internet">Please connect to internet.</string>
    <string name="please_redownload">Please redownload data.</string>
    <string name="please_check_username_and_password">Please check Username and Password.</string>
    <string name="press_start_sync">Please press \'Start Sync\' before download.</string>
    <string name="enter_activation_id">Please enter activation Key.</string>
    <string name="thirdparty_installation_error">Please enable "Unknown Sources" in settings.</string>
    <string name="external_storage_not_available">External Storage space not available. Please check space available.</string>
    <string name="no_application_available_to_view_pdf">No Application available to view PDF.</string>
    <string name="no_application_available_to_view_ppt">No Application available to view PPT.</string>
    <string name="no_application_available_to_view_excel">No Application available to view Excel.</string>
    <string name="no_application_available_to_view_video">No Application available to view Video.</string>
    <string name="amount_exeeds_the_balance_please_check">Amount exceeds the balance,  please check.</string>
    <string name="its_highly_recommend_you_to_upload_the_images_before_capturing_new_image">Its highly recommend you to upload the images before capturing new image.</string>
    <string name="maximum_number_of_images_has_been_captured_without_upload_Do_upload_or_delete_images">Maximum number of images has been captured without upload. Do upload or click Gallery to delete images.</string>
    <string name="order_exist_without_invoice">Orders exist without invoice creation.</string>
    <string name="password_does_not_match">Password does not match.</string>
    <string name="its_not_possible_to_upload_without_img">Its not possible to upload without images.</string>
    <string name="enter_amount">Enter amount</string>
    <string name="sel_bank">Select Bank</string>
    <string name="sel_branch">Select Branch</string>
    <string name="copy_right">© 2017 Ivy Mobility Solutions Ltd. All rights reserved.</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="download">Download</string>
    <string name="Name">Name</string>
    <string name="PendingBills">Pending Bills</string>
    <string name="Address">Address</string>
    <string name="Address1">Address 1</string>
    <string name="Address2">Address 2</string>
    <string name="Seller">Seller Wise</string>
    <string name="Channelwise">Channel Wise</string>
    <string name="Amount">Amount</string>
    <string name="retailername">Store Name</string>
    <string name="version">Version : </string>
    <string name="all">All</string>
    <string name="mrp">MRP</string>
    <string name="gallery">Gallery</string>
    <string name="enter_activation_key">Enter Activation Key</string>
    <string name="product_name">Product Name</string>
    <string name="ou">OU</string>
    <string name="msq">MSQ</string>
    <string name="sp">SP</string>
    <string name="item_piece">OP</string>
    <string name="collection">Collection</string>
    <string name="invoice_no">Invoice No</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="inv_amt">Inv Amt</string>
    <string name="received">Received</string>
    <string name="os_amt">OS Amt</string>
    <string name="cheque_num">Cheque Num</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch_area">Branch</string>
    <string name="price">Price</string>
    <string name="rp">RP</string>
    <string name="disc">Dist%</string>
    <string name="value">Value</string>
    <string name="total_value">Total Value</string>
    <string name="tot_line">Total Lines</string>
    <string name="contact_no">Contact Number</string>
    <string name="order_date">Order Date</string>
    <string name="lines">Lines</string>
    <string name="avg_lines">Average Lines</string>
    <string name="date">Start Date</string>
    <string name="start_visit">Start Visit</string>
    <string name="type">Type</string>
    <string name="stock_report">Stock Report</string>
    <string name="sih">SIH</string>
    <string name="total">Total</string>
    <string name="unit_price">U.Price</string>
    <string name="init_qty">Init Qty</string>
    <string name="tot_qty">Tot Qty</string>
    <string name="distributor_name">Distributor Name</string>
    <string name="tin">TIN:</string>
    <string name="outlet_name">Outlet Name</string>
    <string name="item">Item</string>
    <string name="discount">Discount</string>
    <string name="print">Print</string>
    <string name="plan_task">Enter Task Title</string>
    <string name="applyto">Applicable for:</string>
    <string name="day">Day</string>
    <string name="order_report">ORDER REPORT</string>
    <string name="order_entry">Order</string>
    <string name="so">SO</string>
    <string name="edit">Edit</string>
    <string name="photo_capture">PhotoCapture</string>
    <string name="category">Category</string>
    <string name="report">Report</string>
    <string name="new1">NEW</string>
    <string name="retailer">Outlet</string>
    <string name="task_creation">Create New Task</string>
    <string name="inv_no">Invoice No</string>
    <string name="inv_date">Inv Date</string>
    <string name="ppq">PPQ</string>
    <string name="qty">Qty</string>
    <string name="prod_code">Product Code</string>
    <string name="submit">Submit</string>
    <string name="hvp3m">HVP3M</string>
    <string name="sync">Synchronization</string>
    <string name="start_sync">Start Sync</string>
    <string name="with_images">With Images</string>
    <string name="close_the_day">Close for the Day</string>
    <string name="delete">Delete</string>
    <string name="balance">Balance</string>
    <string name="sales">Sales</string>
    <string name="enter_deviate_reason_to_plan_this_retailer_for_today">Enter deviate reason to plan this retailer for today</string>
    <string name="retailer_is_already_planned_for_today"> Retailer is already planned for today.</string>
    <string name="no_deviate_reason_found_plz_redownload"> No Deviate Reason found. please redownload.</string>
    <string name="Deviation_not_allowed">Deviation not allowed.</string>
    <string name="deviation_not_allowed_for_new_retailer"> Deviation not allowed for New Retailer.</string>
    <string name="order_not_saved_go_back">Order not saved.Do you want to go back?</string>
    <string name="no_channels_download">No Channels Download</string>
    <string name="no_sub_channels_download">No Sub Channels Download</string>
    <string name="no_beats_download">No Beats Download</string>
    <string name="no_initiative_available">No Initiative Available</string>
    <string name="order_saved_locally_order_id_is">Order Saved. Order ID is: </string>
    <string name="new_store_infn_not_saved">New Store information not saved</string>
    <string name="saving_new_order">Saving new order…</string>
    <string name="saving_invoice">Saving Invoice…</string>
    <string name="sales_return_saved_locally">Saved Locally.</string>
    <string name="Please_select_next_day">Please select Next Day.</string>
    <string name="saving">Saving…</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="enter_task_description">Task Description</string>
    <string name="order_remarks">Remark</string>
    <string name="item_case">OC</string>
    <string name="dist_inv">Dist Inv</string>
    <string name="apply_so">Apply Suggested Qty</string>
    <string name="all_channel">All Channel</string>
    <string name="spl_filter">Special Filter</string>
    <string name="prd_filter">Product Filter</string>
    <string name="barcode">Barcode</string>
    <string name="apply_sih">Apply SIH</string>
    <string name="item_outer">OO</string>
    <string name="apply_std_qty">Apply Standard Qty</string>
    <string name="batch_no">Batch No</string>
    <string name="scheme">Scheme</string>
    <string name="fivefilter">Fivefilter</string>
    <string name="sih_case">SIH CS</string>
    <string name="sih_outer">SIH OU</string>
    <string name="addpromo">Add New Promotion</string>
    <string name="history">History</string>
</resources>