<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ivydist="http://schemas.android.com/apk/res-auto" >
    
   
     <item
        android:id="@+id/menu_fivefilter"
        android:icon="@drawable/icon_menu_filter"
        android:orderInCategory="101"
        android:title="@string/fivefilter"
        ivydist:showAsAction="always"/>
    <item
        android:id="@+id/menu_competitor_filter"
        android:icon="@drawable/icon_menu_filter"
        android:orderInCategory="100"
        android:title="C.F"
        ivydist:showAsAction="always"
        android:visible="false" />
    <item
        android:id="@+id/menu_spl_filter"
        android:icon="@drawable/ic_action_star"
        android:orderInCategory="99"
        android:title="S.F"
        ivydist:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/menu_loc_filter"
        android:icon="@drawable/ic_action_location_place"
        android:title="L.F"
        ivydist:showAsAction="always"/>
    <item
        android:id="@+id/menu_apply_so"
        android:icon="@drawable/icon_apply"
        android:title="@string/apply_so"
        android:visible="false"
        ivydist:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/menu_apply_std_qty"
        android:icon="@drawable/icon_stdqty_apply"
        android:title="@string/apply_std_qty"
        android:visible="false"
        ivydist:showAsAction="collapseActionView"/>

    <!--
         <item
        android:id="@+id/menu_search"
        android:icon="@drawable/icon_new_retailer"
        android:orderInCategory="100"
        android:title="Search"
        ivydist:showAsAction="always"/>



    -->
    <item
        android:id="@+id/menu_scheme"
        android:icon="@drawable/ic_action_icon_reports"
        android:title="@string/scheme"
        ivydist:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_remarks"
        android:icon="@drawable/ic_remark"
        android:title="@string/order_remarks"
        ivydist:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_barcode"
        android:icon="@drawable/ic_vector_barcode_scan"
        android:orderInCategory="96"
        android:title="@string/barcode"
        ivydist:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/menu_next"
        android:icon="@drawable/icon_save"
        android:orderInCategory="102"
        android:title="@string/save"
        ivydist:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/menu_sih_apply"
        android:icon="@drawable/icon_stock"
        android:orderInCategory="101"
        android:title="@string/apply_sih"
        ivydist:showAsAction="never"/>

    <item
        android:id="@+id/menu_survey"
        android:icon="@drawable/icon_survey"
        android:orderInCategory="101"
        android:title="Survey"
        android:visible="false"
        ivydist:showAsAction="always" />
    <item
        android:id="@+id/menu_expand"
        android:icon="@drawable/ic_down_arrow"
        android:orderInCategory="101"
        android:title="expand"
        android:visible="false"
        ivydist:showAsAction="always"
        />

    <item
        android:id="@+id/menu_reason"
        android:icon="@drawable/icon_review_plan"
        android:orderInCategory="101"
        android:title="@string/Noorderreason"
        android:visible="false"
        ivydist:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_action_sort"
        android:title="Sort"
        ivydist:showAsAction="always"
        android:visible="false"
        android:iconTint="@color/white"/>

</menu>