<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ivydist="http://schemas.android.com/apk/res-auto" >

  <item
        android:id="@+id/menu_fivefilter"
        android:icon="@drawable/icon_menu_filter"
        android:orderInCategory="95"
        android:title="@string/fivefilter"
        ivydist:showAsAction="always"/>
   <item
        android:id="@+id/menu_bottle_return"
        android:icon="@drawable/ic_action_bottle_return"
        android:orderInCategory="96"
        android:title="Bottle Return"
        android:visible="true"
        ivydist:showAsAction="always"/>
    <item
        android:id="@+id/menu_next"
        android:icon="@drawable/icon_save"
        android:orderInCategory="97"
        android:title="@string/save"
        android:visible="false"
        ivydist:showAsAction="always"/>

    <item
        android:id="@+id/menu_loc_filter"
        android:icon="@drawable/ic_action_location_place"
        android:title="L.F"
        android:visible="false"
        ivydist:showAsAction="always"/>

    <item
        android:id="@+id/menu_barcode"
        android:icon="@drawable/ic_vector_barcode_scan"
        android:orderInCategory="96"
        android:title="@string/barcode"
        ivydist:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/menu_sih_apply"
        android:icon="@drawable/icon_stock"
        android:orderInCategory="101"
        android:title="@string/apply_sih"
        android:visible="false"
        ivydist:showAsAction="never"/>

    <item
        android:id="@+id/menu_unload_history"
        android:icon="@drawable/info"
        android:orderInCategory="96"
        android:title="@string/history"
        ivydist:showAsAction="never"
        android:visible="false"/>
        />
   
   

</menu>