<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        style="?attr/customListTitle"
        android:layout_width="@dimen/order_stock_list_product_name_width"
        android:layout_height="match_parent"
        android:gravity="start"
        android:padding="3dp"
        android:text="@string/product_name" >
    </TextView>

    <TextView
        android:id="@+id/batchnotitle"
        style="?attr/customListTitle"
        android:layout_width="@dimen/order_stock_list_item_width_large"
        android:layout_height="match_parent"

        android:text="@string/batch_no" />

    <TextView
        android:id="@+id/sihTitle"
        style="?attr/customListTitle"
        android:layout_width="@dimen/order_stock_list_item_width_large"
        android:layout_height="match_parent"

        android:tag="sih_piece"
        android:text="@string/sih" />

    <!--
    <TextView android:layout_width="wrap_content" >

    </TextView>
    -->

    <TextView
        android:id="@+id/itemcasetitle"
        style="?attr/customListTitle"
        android:layout_width="@dimen/order_stock_list_item_width_large"
        android:layout_height="match_parent"

        android:padding="3dp"
        android:tag="item_case"
        android:text="@string/item_case"
        android:visibility="gone" >
    </TextView>

    <TextView
        android:id="@+id/outeritemcasetitle"
        style="?attr/customListTitle"
        android:layout_width="@dimen/order_stock_list_item_width_large"
        android:layout_height="match_parent"

        android:padding="3dp"
        android:tag="item_case"
        android:text="@string/item_outer"
        android:visibility="gone" >
    </TextView>

    <TextView
        android:id="@+id/itempiecetitle"
        style="?attr/customListTitle"
        android:layout_width="@dimen/order_stock_list_item_width_large"
        android:layout_height="match_parent"

        android:padding="3dp"
        android:tag="item_piece"
        android:text="@string/item_piece"
        android:visibility="gone" >
    </TextView>

    <TextView
        android:id="@+id/ajdusted_sihTitle"
        style="?attr/customListTitle"
        android:layout_width="@dimen/order_stock_list_item_width_large"
        android:layout_height="match_parent"

        android:tag="Adjusted sih"
        android:text="@string/adjusted_sih" />

</LinearLayout>