<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ivydist="http://schemas.android.com/apk/res-auto" >

   <item
        android:id="@+id/menu_remarks"
        android:icon="@drawable/ic_remark"
        android:orderInCategory="97"
        android:title="@string/order_remarks"
        ivydist:showAsAction="always"/>
    <item
        android:id="@+id/menu_spl_filter"
        android:icon="@drawable/ic_action_star"
        android:orderInCategory="98"
        android:title="@string/spl_filter"
        ivydist:showAsAction="always"/>
    <item
        android:id="@+id/menu_product_filter"
        android:icon="@drawable/icon_menu_filter"
        android:orderInCategory="99"
        android:title="@string/prd_filter"
        ivydist:showAsAction="always"/>
    <item
        android:id="@+id/menu_next"
        android:icon="@drawable/icon_save"
        android:orderInCategory="102"
        android:title="@string/save"
        ivydist:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/menu_location_filter"
        android:icon="@drawable/ic_action_location_place"
        android:orderInCategory="1"
        android:title="L.F"
        android:visible="false"
        ivydist:showAsAction="always"/>
    <item
        android:id="@+id/menu_photo"
        android:icon="@drawable/icon_photo"
        android:orderInCategory="96"
        android:title="Photo"
        android:visible="false"
        ivydist:showAsAction="always"/>


    <item
        android:id="@+id/menu_survey"
        android:icon="@drawable/icon_survey"
        android:orderInCategory="101"
        android:title="Survey"
        android:visible="false"
        ivydist:showAsAction="always"/>

    <item
        android:id="@+id/menu_fivefilter"
        android:icon="@drawable/icon_menu_filter"
        android:orderInCategory="95"
        android:title="@string/fivefilter"
        ivydist:showAsAction="always"
        android:visible="false"/>

</menu>