<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ivydist="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_action_delete"
        android:orderInCategory="96"
        android:title="@string/delete"
        android:visible="false"
        ivydist:showAsAction="always" />
    <item
        android:id="@+id/menu_barcode"
        android:icon="@drawable/ic_vector_barcode_scan"
        android:orderInCategory="97"
        android:title="@string/barcode"
        android:visible="false"
        ivydist:showAsAction="always" />

    <item
        android:id="@+id/menu_spl_filter"
        android:icon="@drawable/ic_action_star"
        android:orderInCategory="98"
        android:title="S.F"
        android:visible="false"
        ivydist:showAsAction="always" />
    <item
        android:id="@+id/menu_product_filter"
        android:icon="@drawable/icon_menu_filter"
        android:orderInCategory="99"
        android:title="P.F"
        ivydist:showAsAction="always" />
    <item
        android:id="@+id/menu_fivefilter"
        android:icon="@drawable/icon_menu_filter"
        android:orderInCategory="95"
        android:title="@string/fivefilter"
        android:visible="false"
        ivydist:showAsAction="always" />
    <item
        android:id="@+id/menu_scheme_view"
        android:icon="@drawable/ic_action_icon_reports"
        android:orderInCategory="100"
        android:title="@string/next"
        android:visible="false"
        ivydist:showAsAction="always" />
    <item
        android:id="@+id/menu_next"
        android:icon="@drawable/ic_action_navigation_next_item"
        android:orderInCategory="102"
        android:title="@string/next"
        ivydist:showAsAction="always" />

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/icon_save"
        android:orderInCategory="103"
        android:title="@string/save"
        android:visible="false"
        ivydist:showAsAction="always" />
</menu>