<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/closeTask"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/close"
            android:visibility="gone" />

        <Button
            android:id="@+id/saveTask"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:visibility="gone" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="8dp"
            android:text="@string/plan_task"
            android:visibility="gone" />

        <EditText
            android:id="@+id/tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="left|center"
            android:hint="@string/enter_task_title"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/taskView"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="left|center"
            android:hint="@string/enter_task_description"
            android:maxLines="4"
            android:textColor="@android:color/black" />

        <TextView
            style="?textFieldStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/applyto" />

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Seller"
                android:textColor="@android:color/black"/>

            <RadioButton
                android:id="@+id/Channelwise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Channelwise"
                android:textColor="@android:color/black" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/allchannel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:visibility="gone" >

            <CheckBox
                android:id="@+id/allcheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all_channel"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/channel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </Spinner>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
</RelativeLayout>